# lrc-site

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  init-dev.bash  init-dev.ps1  nginx.conf
backend/: .dockerignore  .env  .gitignore  Dockerfile  init.py  lrc_utils.py  main.py  pyproject.toml
backend-env/: pyvenv.cfg
backend/util/: subtitle_utils.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AudioComponent.css  AudioComponent.jsx  imageBlock.jsx
frontend/src/audio/: AudioComponent.jsx
frontend/src/sidebar/: sidebar.jsx
sample/s1/: test1.vtt
sample/s2/: test2.vtt  test3.lrc
