[tool.poetry]
name = "server"
version = "0.1.0"
description = "fastapi server"
authors = ["Weijie Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
fuzzywuzzy = "0.18.0"
natsort = "^8.4.0"
uvicorn = "^0.32.0"
python-levenshtein = "^0.26.1"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
